Conclusão do homework 1 do módulo Spring Data 3.2